--- a/hw03/hw03_dplyr.Rmd
+++ b/hw03/hw03_dplyr.Rmd
@@ -161,82 +161,6 @@ gapminder %>%
 
 ---
 
-## Task Option 6
+## Task Option 4
 
-### Countries with Interesting Stories.
-
-```{r opt_6_data, warning=F, message=F}
-
-#main dataframe for all countries, this is what to graph by
-df1 <- gapminder %>%
-            group_by(country) %>%
-            arrange(year) %>%
-            mutate(popChg = tsibble::difference(pop),
-                   popChg.pc = tsibble::difference(pop)/pop*100 %>% round(digits=1)) %>%
-            drop_na() 
-#make a summary dataframe of selected countries and mean of all others
-df2 <- df1 %>%
-      mutate(Group = ifelse(country=="Kuwait","KW", 
-                              ifelse(country=="Equatorial Guinea", "EG", "All"))) %>%
-      group_by(Group) %>%
-      summarize(chg_1957=mean(popChg.pc[year==1957]) %>% round(1),
-                chg_1962=mean(popChg.pc[year==1962]) %>% round(1),
-                chg_1967=mean(popChg.pc[year==1967]) %>% round(1),
-                chg_1972=mean(popChg.pc[year==1972]) %>% round(1),
-                chg_1977=mean(popChg.pc[year==1977]) %>% round(1),
-                chg_1982=mean(popChg.pc[year==1982]) %>% round(1),
-                chg_1987=mean(popChg.pc[year==1987]) %>% round(1),
-                chg_1992=mean(popChg.pc[year==1992]) %>% round(1),
-                chg_1997=mean(popChg.pc[year==1997]) %>% round(1),
-                chg_2002=mean(popChg.pc[year==2002]) %>% round(1), #its too wide for side-by-side
-                chg_2007=mean(popChg.pc[year==2007]) %>% round(1)) #so must transpose below
-    
-#transposing the data... there must be an easier way
-o6 <- df2 %>%
-        t() %>% #transpose
-        cbind(meanPopChg_Year=names(df2)) %>% #add a names column containing the years
-        as_tibble(.name_repair="universal") %>% #make tibble, pre-slice because slice only works on tibble
-        slice(-1) %>% #take out the first row, which does not have data
-        rename(Other=...1, Eq_Guinea=...2, Kuwait=...3) %>% #rename the other columns
-        select(meanPopChg_Year, everything()) %>% #move the ID column to the left
-        select(-Other, Other) %>% #move Other to end, match legend order
-        mutate_at(.vars=1, .funs=funs(substr(.,nchar(.)-3,nchar(.)))) %>% #keep just the year
-        mutate_at(1:4, as.numeric) #change the column classes back to numeric
-
-```
-
-```{r opt_6 graph}
-
-
-#filtered dataframes for countries of interest
-df.eg <- df1 %>% filter(country=="Equatorial Guinea")
-df.kw <- df1 %>% filter(country=="Kuwait")
-
-#plot it all together
-o6g <-  df1 %>%
-          ggplot(aes(y=popChg.pc,x=year,group=country)) +
-            geom_line(aes(colour="grey"), alpha=0.3) +
-            geom_line(data=df.eg, 
-                      aes(y=popChg.pc,x=year,group=country,colour="firebrick4"),  
-                      alpha=1, size=1.1) +
-            geom_line(data=df.kw, 
-                      aes(y=popChg.pc,x=year,group=country, colour="darkslategray4"), 
-                      alpha=1, size=1.1) +
-            scale_colour_manual(name="Countries", #for colours to be used in legend they need to be called in aes() within geom() functions
-                                values=c("darkslategray4","firebrick4","grey"), #order apprently needs to be in reverse of when called
-                                labels=c("Kuwait","Equatorial Guinea","Other")) + 
-            theme_bw() +
-            labs(title="Kuwait and Equatorial Guinea have had major population \n fluctuations due to armed conflict",
-                 x="",
-                 y="5-year population change (%)")
-```
-
-I looked for patterns in population change by country over the course of the dataset. Equatorial Guinea and Kuwait stood out because they both have periods that rank among the highest and lowest 5-year population changes among all countries. This is due to armed conflict, with Equatorial Guinea having a period of political violence and war in the 1970's and Kuwait being in conflict with Iraq in the late 1980's and early 1990's. The table and graph both show percentage change over 5-year periods.
-
-```{r opt_6_display, echo=F}
-#DT::datatable(o6)
-knitr::kable(o6)
-o6g
-
-```
-
+### Population-weighted Life Expectancy
