--- a/hw03/hw03_dplyr.Rmd
+++ b/hw03/hw03_dplyr.Rmd
@@ -21,10 +21,12 @@ suppressPackageStartupMessages(library(knitr)) #For use of kable()
 ## Keep track of list of tables
 tab.cap = c('Table 1: Minimum and Maximum Country Level GDP per Capita by Continent and the corresponding countries and years',
             'Table 2: Minimum and Maximum Continent Level GDP per Capita and the corresponding year',
-            'Table 3: Summary statistics for the Distribution of Country GDP per Capita by Continent')
+            'Table 3: Summary statistics for the Distribution of Country GDP per Capita by Continent',
+            'Table 4: Life expectancies (in years) using population-weighted means across all countries globally and within continents')
 
 fig.cap = c('Figure 1: Boxplots of country-level GDP per capita by continent with highlighted maximum and minimum values',
-            'Figure 2: Jittered plot of country-level GDP per capita grouped by continent')
+            'Figure 2: Jittered plot of country-level GDP per capita grouped by continent',
+            'Figure 3: Global life expectancy and continent-level life expectancies over time')
 ```
 
 ## Introduction
@@ -68,7 +70,7 @@ kable(mm.gdp, col.names=c('Continent', 'Minimum<br>GDP', 'Minimum<br>GDP<br>Coun
 
 ```
 
-Boxplots of the country-level GDP per capita's by continent are given in Figure 1.  This plot is created using the `geom_boxplot()` function to create the boxplot layer along with `geom_point()` to highlight the maximum and minimums.  These functions are layers of the `ggplot` function from the `ggplot2` package.  The benefit of this plot is that the minimums and maximums are not always perceived as outliers in the boxplots due to the log scale used on the y-axis.  Thus, expliciting highlighting the points reaffirms their position on the boxplot.
+Boxplots of the country-level GDP per capita's by continent are given in Figure 1.  This plot is created using the `geom_boxplot()` function to create the boxplot layer along with `geom_point()` to highlight the maximum and minimums.  These functions are layers of the `ggplot` function from the `ggplot2` package.  The benefit of this plot is that the minimums and maximums are not always perceived as outliers in the boxplots due to the log scale used on the y-axis.  Thus, expliciting highlighting the points reaffirms their position on the boxplot.  I used code from the following [stackoverflow thread](https://stackoverflow.com/questions/17148679/construct-a-manual-legend-for-a-complicated-plot) to create the custom legend.
 
 ```{r boxplot, fig.cap=fig.cap[1]}
 clrs <- c("Maximum"="#62c76b", "Minimum"="#f04546")
@@ -112,8 +114,9 @@ kable(mm.gdp2, col.names=c('Continent', 'Minimum<br>GDP', 'Minimum<br>GDP<br>Yea
 
 Task Option 3 asks us to look at the spread of the country-level GDP per capita data within the continents.  To do this, we create
 
-  1. Table 3, which shows summary statistics for the distribution of GDP per capita for each continent,
-  2. Figure 2, which plots country GDP per capita against continent as a jittered scatterplot.
+  1. a tibble called `gdp.spread` which is used to create a table of summary statistics on country-level GDP per capita and a jittered scatterplot,
+  2. Table 3, which shows summary statistics for the distribution of GDP per capita for each continent,
+  3. Figure 2, which plots country GDP per capita against continent as a jittered scatterplot.
 
 ```{r spread}
 
@@ -164,3 +167,50 @@ gapminder %>%
 ## Task Option 4
 
 ### Population-weighted Life Expectancy
+
+For this task, we
+
+  1. create a tibble called `life.exp` which includes population-weighted life expectancy across all countries for each year, which we refer to as the global life expectancy, and population-weighted life expectancies for the countries within each continent for each year,
+  2. create Table 4 to show the global life expectancies and continent life expectancies, weighted by country population, for each year,
+  3. create Figure 3, a time series plot of the global life expectancies and the continent life expectancies weighted by country population.
+
+```{r lifeExp}
+life.exp <- gapminder %>% 
+  group_by(year) %>% 
+  mutate(global = weighted.mean(lifeExp, w=pop)) %>% 
+  ungroup() %>% 
+  group_by(continent, year) %>% 
+  mutate(cont.le = weighted.mean(lifeExp, w=pop)) %>% 
+  ungroup() %>%
+  group_by(year) %>%
+  summarize(Global=unique(global),
+            Africa=unique(cont.le[continent == 'Africa']),
+            Americas=unique(cont.le[continent == 'Americas']),
+            Asia=unique(cont.le[continent == 'Asia']),
+            Europe=unique(cont.le[continent == 'Europe']),
+            Oceania=unique(cont.le[continent == 'Oceania'])) %>%
+  mutate_all(~round(., 2))
+
+datatable(life.exp, colnames=c('Year', names(life.exp[-1])), caption=tab.cap[4])
+```
+
+Since the Table 4 does not make it easy to visualize trends or make comparisons, the following plot shows a time series of the population-weighted life expectancies for all countries and population-weighted life expectancies for countries within each continent.  There is an obvious upward trend in life expectancies over time.
+
+```{r timeseries, fig.cap=fig.cap[3], warning=FALSE}
+Global <- as_tibble(data.frame('continent'=rep('Global', nrow(life.exp)), 'year'=life.exp$year, 'cont.le'=life.exp$Global, stringsAsFactors=FALSE))
+
+gapminder %>% 
+  group_by(year) %>% 
+  mutate(global = weighted.mean(lifeExp, w=pop)) %>% 
+  ungroup() %>% 
+  group_by(continent, year) %>% 
+  summarize(cont.le = weighted.mean(lifeExp, w=pop)) %>%
+  ungroup() %>% 
+  mutate(continent=as.character(continent)) %>% 
+  rbind(., Global) %>% 
+  mutate_at(vars(continent), ~as.factor(.)) %>% 
+  ggplot(aes(x=year, y=cont.le, colour=continent, linetype=continent)) +
+  geom_line() +
+  labs(title="Population-Weighted Life Expectancies", color="", linetype="",
+       x='Year', y='Life Expectancy (years)')
+```
