--- a/hw04/hw04_tidy.Rmd
+++ b/hw04/hw04_tidy.Rmd
@@ -14,13 +14,12 @@ knitr::opts_chunk$set(echo = TRUE,
                       fig.path = "hw04_files/")
 ```
 
-Throughout this analysis, we use the `gapminder`, `tidyverse`, `tidyr` and `DT` packages.  The code to load these packages is not displayed in the report.
+Before beginning the analysis, we load the `gapminder`, `tidyverse`, `tidyr` and `DT` packages.  The code to load these packages is not displayed in the report.
 
 ```{r load packages, warning=FALSE, message=FALSE}
-suppressPackageStartupMessages(library(gapminder))
-suppressPackageStartupMessages(library(tidyverse))
-suppressPackageStartupMessages(library(tidyr))
-suppressPackageStartupMessages(library(DT))
+suppressPackageStartupMessages(library(gapminder)) # for gapminder dataset
+suppressPackageStartupMessages(library(tidyverse)) #loads ggplot2, tibble, tidyr, dplyr packages
+suppressPackageStartupMessages(library(DT)) #for datatable() command to display datatables
 ```
 
 # Question 1
