--- a/hw04/hw04_tidy.Rmd
+++ b/hw04/hw04_tidy.Rmd
@@ -12,15 +12,25 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE,
                       fig.path = "hw04_files/")
+
+## Keep track of list of tables
+tab.cap = c('Table 1: Minimum and Maximum Country Level GDP per Capita by Continent and the corresponding countries and years',
+            'Table 2: Minimum and Maximum Continent Level GDP per Capita and the corresponding year',
+            'Table 3: Summary statistics for the Distribution of Country GDP per Capita by Continent',
+            'Table 4: Life expectancies (in years) using population-weighted means across all countries globally and within continents')
+
+fig.cap = c('Figure 1: Scatterplot of life expectancies between Canada and the United States',
+            'Figure 2: Jittered plot of country-level GDP per capita grouped by continent',
+            'Figure 3: Global life expectancy and continent-level life expectancies over time')
 ```
 
 ## Introduction
 
 For this analysis, we load the `gapminder`, `tidyverse`, `tidyr` and `DT` packages.  The code to load these packages is not displayed in the report.  Data wrangling is performed on the gapminder dataset.  In this report, I have chosen the following:
 
-  * [__Univariate Option 1__](#exercise-1---univariate-option-1) - Get the maximum and minimum of GDP per capita for all continents
-  * [__Multivariate Option 1__](#exercise-2---multivariate-option-1) - Look at the spread of GDP per capita within the continents
-  * [__Exercise 3__](#exercise-3---table-joins) - Find countries with interesting stories
+  * [__Univariate Option 1__](#exercise-1---univariate-option-1) - Using the gapminder dataset, we make a new tibble with one row per year and two columns containing the life expectancies for two countries, use this new tibble to make a scatterplot of the life expectancies, and then re-lengthen the data.
+  * [__Multivariate Option 1__](#exercise-2---multivariate-option-1) - Using the gapminder dataset, we make a tibble with one row per year and columns for both life expectancies and GDP per capita for two countries and then re-lengthen the data.
+  * [__Exercise 3__](#exercise-3---table-joins) - 
 
 ```{r load packages, warning=FALSE, message=FALSE}
 suppressPackageStartupMessages(library(gapminder)) # for gapminder dataset
@@ -30,56 +40,54 @@ suppressPackageStartupMessages(library(DT)) #for datatable() command to display 
 
 ## Exercise 1 - Univariate Option 1
 
-### Part 1
+### Make a Tibble
 
-We will make a tibble with one row per year, and columns for life expectancy for 2 countries, Canada and France.
+Observations in the `gapminder::gapminder` dataset can be defined as country/year.  Thus, the dataset can be considered tidy since each row corresponds to one country/year observation.  In this section, we make a tibble with one row per year and columns for life expectancy for two or more countries.  The countries used are Canada and United States.
+
 ```{r}
-can_france <- gapminder %>% 
-  filter(country == "Canada" | 
-           country == "France") %>% 
-  select(country, year, lifeExp) %>% 
+can.us <- gapminder %>% 
+  #filter to Canada and United States
+  filter(country == "Canada" | country == "United States") %>% 
+  #select year, country, and life expectancy columns
+  select(year, country, lifeExp) %>% 
+  # Transform tibble with year, country, and lifeExp columns to year, Canada and United States with life expectancies
   pivot_wider(id_cols = year,
               names_from = country,
-              values_from = lifeExp) %>% 
-  rename(Canada_lifeExp = Canada, 
-         France_lifeExp = France)
+              values_from = lifeExp)
 
-datatable(can_france)
+datatable(can.us)
 ```
 
-### Part 2
+### Scatterplot
 
-Next step, we will produce a scatterplot of the life expectancy of Canada versus the life expectancy of France! Note that I renamed the lifeExp columns so that it is more readable for the viewer. 
+In this section, we use the new tibble `can.us` to produce a scatterplot of the life expectancy of Canada versus the life expectancy of the United States.  Note that since the column "United States" has a space in the middle, the code uses backticks, \`, so that the aesthetics are properly mapped.
 
-```{r}
-can_france %>% 
-  ggplot(aes(Canada_lifeExp, France_lifeExp)) +
-  geom_point()
+```{r lifeExp, fig.cap=fig.cap[1]}
+can.us %>% 
+  ggplot(aes(Canada, `United States`)) +
+  geom_point() +
+  ggtitle(label='Life Expectancies (years)')
 ```
 
-From this plot, we can see a direct relationship: As the LifeExp of Canada increases, so does the LifeExp of France!
+### Re-lengthen 
 
-### Part 3
-
-In this step, we will now re-lengthen the data from above.
+In this step, the `can.us` tibble is re-lengthened.
 
 ```{r}
-can_france <- can_france %>% 
-  rename(Canada = Canada_lifeExp, 
-         France = France_lifeExp) %>% 
+can.us %>% 
   pivot_longer(cols = c("Canada",
-                        "France"),
+                        "United States"),
                names_to = "country",
-               values_to = "lifeExp")
-
-datatable(can_france)
+               values_to = "lifeExp") %>% 
+  arrange(country) %>% 
+  datatable()
 ```
 
 ## Exercise 2 - Multivariate Option 1
 
-### Part 1
+### Make a Tibble
 
-In this part, we will make a tibble with one row per year, and columns for life expectancy AND GDP per capita for two countries, specifically China and Germany. This means that we will only have 1 row for each each, followed by columns for lifeExp of China, lifeExp of Germany, GDP for China, and GDP for France, for a total of 5 columns.
+
 
 ```{r}
 china_germany <- gapminder %>% 
@@ -93,8 +101,7 @@ china_germany <- gapminder %>%
 datatable(china_germany)
 ```
 
-### Part 2
-In this section, we will now re-lengthen the data!
+### Re-lengthen
 
 ```{r}
 cg <- china_germany %>% 
@@ -111,8 +118,8 @@ As you can see from the above tibble, we've recreated the long-form data set tha
 Begin by reading in guest and email.
 
 ```{r}
-g <- read_csv("https://raw.githubusercontent.com/STAT545-UBC/Classroom/master/data/wedding/attend.csv")
-e <- read_csv("https://raw.githubusercontent.com/STAT545-UBC/Classroom/master/data/wedding/emails.csv")
+guest <- read_csv("https://raw.githubusercontent.com/STAT545-UBC/Classroom/master/data/wedding/attend.csv")
+email <- read_csv("https://raw.githubusercontent.com/STAT545-UBC/Classroom/master/data/wedding/emails.csv")
 
 ```
 
