--- a/hw04/hw04_tidy.Rmd
+++ b/hw04/hw04_tidy.Rmd
@@ -87,29 +87,31 @@ can.us %>%
 
 ### Make a Tibble
 
-
+In this section, we make a tibble with one row per year and columns for both life expectancy and GDP per capita for two unique countries.  The countries chosen are China and India.  Both life expectancy and GDP per capita are rounded to two decimal places.
 
 ```{r}
-china_germany <- gapminder %>% 
+ch.in <- gapminder %>% 
   filter(country == "China" |
-           country == "Germany") %>% 
+           country == "India") %>% 
   select(country, year, lifeExp, gdpPercap) %>% 
   pivot_wider(id_cols = year,
               names_from = country,
-              values_from = c(lifeExp, gdpPercap))
+              values_from = c(lifeExp, gdpPercap)) %>% 
+  mutate_at(vars(-year), ~round(., 2))
 
-datatable(china_germany)
+datatable(ch.in)
 ```
 
 ### Re-lengthen
 
+In this section, we re-lengthen the data so that each row's observation is defined as the year/country intersection.  Since we have 2 countries and `r length(unique(ch.in$year))` years, the re-lengthened data has a total of `r 2*length(unique(ch.in$year))` rows instead of the `r nrow(ch.in)` rows as in the tibble from the previous section.
+
 ```{r}
-cg <- china_germany %>% 
+ch.in %>% 
   pivot_longer(cols = -year,
                names_to = c(".value", "country"),
-               names_sep = "_")
-
-datatable(cg)
+               names_sep = "_") %>% 
+  datatable()
 ```
 As you can see from the above tibble, we've recreated the long-form data set that we originally started with!
 
@@ -128,14 +130,14 @@ For each guest in the guestlist tibble, add a column for email address, which ca
 
 First, separate the emails by row.
 ```{r}
-sep_emails <- e %>% 
+sep_emails <- email %>% 
   separate_rows(guest, sep = ", ")
 
 datatable(sep_emails)
 ```
 
 ```{r}
-joined_list <- g %>% 
+joined_list <- guest %>% 
   rename(guest = "name") %>% 
   left_join(sep_emails, by="guest")
 
@@ -148,7 +150,7 @@ We can move on to the next part: figuring out who we have emails for, but they'r
 ```{r}
 not_in_guestlist <- sep_emails %>%  
   rename(name = "guest") %>% 
-  anti_join(g, by="name")
+  anti_join(guest, by="name")
 
 datatable(not_in_guestlist)
 ```
@@ -159,10 +161,10 @@ As you can see, using the anti-join function allows us to produce all the people
 In this section, we will make a guestlist that includes everyone we have emails for (in addition to the onles in the original guestlist). To do this, we will simply join the table we made in 3.2 with the original guestlist table but appending them to the end. 
 
 ```{r}
-j <- joined_list %>% 
+guest.all <- joined_list %>% 
   rename(name = "guest") %>% 
   bind_rows(not_in_guestlist)
-datatable(j)
+datatable(guest.all)
 ```
 
 The above guestlist contains everyone from the original guestlist, plus all the ones that we have emails for but were not in the original guestlist. Obviously, the new additions do not have information regarding their attendance. 
